Revert "[FIX] Issue: Background color changes in the dark mode."
This reverts commit 166571ba5d590736a85495cc6c9e1b208433a4ff.

--- a/css/color-green-yellow.css
+++ b/css/color-green-yellow.css
@@ -5,11 +5,6 @@
   background: #adff2f;
 }
 
-@media screen and (prefers-color-scheme: dark) {
-  body {
-    background: #adff2f;
-  }
-}
 a, a:focus {
   color: #adff2f;
 }
